--- a/Treact/index__final-project.html
+++ b/Treact/index__final-project.html
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles__final-project.css">
-</head>
-<body>
-    <nav></nav>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Free Modern React Templates</title>
+    <link rel="stylesheet" href="styles__final-project.css" />
+  </head>
+  <body>
+    <div class="site_box">
+      <nav>
+        <container class="nav_container">
+          <a href="#Home">
+            <figure class="logo_wrapper">
+              <img
+                class="logo"
+                src="/Treact/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg"
+                alt="Treact"
+              />
+              <h2 class="logo_name">Treact</h2>
+            </figure>
+          </a>
+
+          <ul class="link_list">
+            <li class="links">
+              <a href="#About" class="link">About</a>
+            </li>
+            <li class="links">
+              <a href="#Blog" class="link">Blog</a>
+            </li>
+            <li class="links">
+              <a href="#Pricing" class="link">Pricing</a>
+            </li>
+            <li class="links">
+              <a href="#Contact Us " class="link">Contact Us</a>
+            </li>
+            <div class="link_space">
+              <li class="links">
+                <a href="#Login" class="link">Login</a>
+              </li>
+              <li class="links">
+                <a href="#Sign Up" class="link linkz"
+                  ><span class="purple">Sign Up</span></a
+                >
+              </li>
+            </div>
+          </ul>
+        </container>
+      </nav>
+
+      <section class="home_page">
+
+
+        <div class="templates">
+          <h1 class="main_header">Beautiful React Templates <span class="purple_text">for you.</span></h1>
+          <p class="main_body">
+            Our templates are easy to setup, understand and customize. Fully
+            modular components with a variety of pages and components.
+          </p>
+          <div class="email_box">
+          <input type="email" placeholder="">
+          <button class="purple">Get Started</button>
+        </div>
+        <div class="main_bottom">
+        <p class="logo__strip-para">OUR TRUSTED CUSTOMERS</p>
+        <figure class="logo__strip-wrapper">
+            <img class="logo_strip" src="/Treact/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
+        </figure>
+    </div>
+    </div>
+
+<figure class="working___lady-wrapper">
+    <img class="working_lady" src="/Treact/assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8 (1).svg" alt="">
+</figure>
+
+      </section>
+    </div>
+  </body>
 </html>
