--- a/Treact/index__final-project.html
+++ b/Treact/index__final-project.html
@@ -50,30 +50,104 @@
       </nav>
 
       <section class="home_page">
-
-
         <div class="templates">
-          <h1 class="main_header">Beautiful React Templates <span class="purple_text">for you.</span></h1>
+          <h1 class="main_header">
+            Beautiful React Templates <span class="purple_text">for you.</span>
+          </h1>
           <p class="main_body">
             Our templates are easy to setup, understand and customize. Fully
             modular components with a variety of pages and components.
           </p>
           <div class="email_box">
-          <input type="email" placeholder="">
-          <button class="purple">Get Started</button>
+            <input
+              class="email"
+              type="email"
+              placeholder="     Your E-mail Address"
+            />
+            <button class="purple">Get Started</button>
+          </div>
+          <div class="main_bottom">
+            <p class="logo__strip-para">OUR TRUSTED CUSTOMERS</p>
+            <figure class="logo__strip-wrapper">
+              <img
+                class="logo_strip"
+                src="/Treact/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png"
+                alt=""
+              />
+            </figure>
+          </div>
         </div>
-        <div class="main_bottom">
-        <p class="logo__strip-para">OUR TRUSTED CUSTOMERS</p>
-        <figure class="logo__strip-wrapper">
-            <img class="logo_strip" src="/Treact/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
+
+        <figure class="working___lady-wrapper">
+          <img
+            class="working_lady"
+            src="/Treact/assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8 (1).svg"
+            alt=""
+          />
         </figure>
-    </div>
-    </div>
+      </section>
 
-<figure class="working___lady-wrapper">
-    <img class="working_lady" src="/Treact/assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8 (1).svg" alt="">
+      <section class="features">
+        <div class="features_row">
+          <p>FEATURES</p>
+          <h1>We have Amazing <span class="purple_text">Service</span></h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Repellendus, repellat deleniti? Corrupti officiis in omnis sed
+            repellendus quidem eaque quis, beatae aliquid debitis corporis
+            labore, deleniti velit quam voluptatum nostrum.
+          </p>
+          <div class="services">
+            <div class="group">
+<figure>
+    <img src="/Treact/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
 </figure>
-
+<h2>Secure</h2>
+<p>We strictly only deal with vendors that provide top notch security.
+</p>
+</div>
+            <div class="group">
+<figure>
+    <img src="/Treact/assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+</figure>
+<h2>24/7 Support</h2>
+<p>We strictly only deal with vendors that provide top notch security.
+</p>
+</div>
+            <div class="group">
+<figure>
+    <img src="/Treact/assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+</figure>
+<h2>Customizable</h2>
+<p>We strictly only deal with vendors that provide top notch security.
+</p>
+</div>
+            <div class="group">
+<figure>
+    <img src="/Treact/assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+</figure>
+<h2>Reliable</h2>
+<p>We strictly only deal with vendors that provide top notch security.
+</p>
+</div>
+            <div class="group">
+<figure>
+    <img src="/Treact/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+</figure>
+<h2>Fast</h2>
+<p>We strictly only deal with vendors that provide top notch security.
+</p>
+</div>
+            <div class="group">
+<figure>
+    <img src="/Treact/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+</figure>
+<h2>Simple</h2>
+<p>We strictly only deal with vendors that provide top notch security.
+</p>
+</div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
