--- a/Treact/index__final-project.html
+++ b/Treact/index__final-project.html
@@ -64,9 +64,9 @@
               type="email"
               placeholder="     Your E-mail Address"
             />
-            <a class="button_wrapper"href="">
-            <button class="purple">Get Started</button>
-        </a>
+            <a class="button_wrapper" href="">
+              <button class="purple purple_single">Get Started</button>
+            </a>
           </div>
           <div class="main_bottom">
             <p class="logo__strip-para">OUR TRUSTED CUSTOMERS</p>
@@ -204,56 +204,62 @@
 
       <section class="quality">
         <div class="quality_info">
-            <div class="quality_wrapper">
-          <p class="features_title">
-            <span class="purple_text">QUALITY WORK</span>
-          </p>
-          <h1 class="features_subtitle">
-            Designed & Developed by
-            <span class="purple_text">Professionals.</span>
-          </h1>
-          <p class="quality_para">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            ipsum. Molestiae, quia! Optio adipisci esse illum labore explicabo
-            vitae illo reiciendis laboriosam tempora sunt architecto, magnam
-            molestias quia eius neque.
-          </p>
-          <a href="">
-          <button class="purple">Learn More</button>
-        </a>
+          <div class="quality_wrapper">
+            <p class="features_title">
+              <span class="purple_text">QUALITY WORK</span>
+            </p>
+            <h1 class="features_subtitle">
+              Designed & Developed by
+              <span class="purple_text">Professionals.</span>
+            </h1>
+            <p class="quality_para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+              ipsum. Molestiae, quia! Optio adipisci esse illum labore explicabo
+              vitae illo reiciendis laboriosam tempora sunt architecto, magnam
+              molestias quia eius neque.
+            </p>
+            <a href="">
+              <button class="purple">Learn More</button>
+            </a>
+          </div>
         </div>
-    </div>
         <figure class="quality__logo-wrapper">
-            <img class="quality_logo" src="/Treact/assets/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+          <img
+            class="quality_logo"
+            src="/Treact/assets/hero-screenshot-1.40a097b525c2f8c9808e.png"
+            alt=""
+          />
         </figure>
       </section>
 
-
-
       <section class="get_started">
-<figure class="started__logo-wrapper">
-    <img class="started_logo" src="/Treact/assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
-</figure>
-<div class="started">
-    <p class="features_title">
-        <span class="purple_text">STEPS</span>
-      </p>
-      <h1 class="features_subtitle">
-        Easy to
-        <span class="purple_text">Get Started.</span>
-      </h1>
-<div class="started_info">
-    <div class="group_1">
-      <h1 class="started_head">01</h1>
+        <figure class="started__logo-wrapper">
+          <img
+            class="started_logo"
+            src="/Treact/assets/hero-screenshot-2.241aac1fbc66db29d873.png"
+            alt=""
+          />
+        </figure>
+        <div class="started">
+          <p class="features_title">
+            <span class="purple_text">STEPS</span>
+          </p>
+          <h1 class="features_subtitle">
+            Easy to
+            <span class="purple_text">Get Started.</span>
+          </h1>
+          <div class="started_info">
+            <div class="group_1">
+              <h1 class="started_head">01</h1>
               <div class="text_group">
                 <h2 class="mini_title">Register</h2>
                 <p class="services_para">
                   We strictly only deal with vendors that provide top notch
                   security.
                 </p>
-            </div>
               </div>
-              <div class="group_1">
+            </div>
+            <div class="group_1">
               <h1 class="started_head">02</h1>
               <div class="text_group">
                 <h2 class="mini_title">Download</h2>
@@ -261,9 +267,9 @@
                   We strictly only deal with vendors that provide top notch
                   security.
                 </p>
-            </div>
               </div>
-              <div class="group_1">
+            </div>
+            <div class="group_1">
               <h1 class="started_head">03</h1>
               <div class="text_group">
                 <h2 class="mini_title">Run</h2>
@@ -271,77 +277,80 @@
                   We strictly only deal with vendors that provide top notch
                   security.
                 </p>
-            </div>
               </div>
             </div>
-            </div>       
-
+          </div>
+        </div>
       </section>
 
       <section class="pricing">
-<div class="pricing_header">
-    <p class="features_title"><span class="purple_text">PRICING</span></p>
-    <h1 class="features_subtitle">Reasonable & Flexible <span class="purple_text">Plans.</span></h1>
-    <div class="pricing__para-wrapper">
-    <p class="pricing_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    </p>
-</div>
-</div>
+        <div class="pricing_header">
+          <p class="features_title"><span class="purple_text">PRICING</span></p>
+          <h1 class="features_subtitle">
+            Reasonable & Flexible <span class="purple_text">Plans.</span>
+          </h1>
+          <div class="pricing__para-wrapper">
+            <p class="pricing_para">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
 
-<div class="pricing_plans">
-<div class="plan">
-    <p class="plan_title">PERSONAL</p>
-    <h2 class="plan_price">$17.99</h2>
-    <p class="plan_term">MONTHLY</p>
-    <p class="plan_title">For Individuals</p>
-    <p class="plan_info">30 Templates</p>
-    <p class="plan_info">7 Landing Pages</p>
-    <p class="plan_info">12 Internal Pages</p>
-    <p class="plan_info">Basic Assistance</p>
-    <div class="pricing__button-wrapper">
-        <a href="">
-    <button class="purple">BUY NOW</button>
-</a>
-</div>
-</div>
-<div class="plan">
-    <p class="plan_title">BUSINESS</p>
-    <h2 class="plan_price">$37.99</h2>
-    <p class="plan_term">MONTHLY</p>
-    <p class="plan_title">For Small Businesses</p>
-    <p class="plan_info">60 Templates</p>
-    <p class="plan_info">15 Landing Pages</p>
-    <p class="plan_info">22 Internal Pages</p>
-    <p class="plan_info">Priority Assistance</p>
-    <div class="pricing__button-wrapper">
-        <a href="">
-    <button class="purple">BUY NOW</button>
-</a>
-</div>
-</div>
-<div class="plan">
-    <p class="plan_title">ENTERPRISE</p>
-    <h2 class="plan_price">$57.99</h2>
-    <p class="plan_term">MONTHLY</p>
-    <p class="plan_title">For Large Companies</p>
-    <p class="plan_info">90 Templates</p>
-    <p class="plan_info">27 Landing Pages</p>
-    <p class="plan_info">37 Internal Pages</p>
-    <p class="plan_info">Personal Assistance</p>
-    <div class="pricing__button-wrapper">
-        <a href="">
-    <button class="purple">BUY NOW</button>
-</a>
-</div>
-</div>
+        <div class="pricing_plans">
+          <div class="plan">
+            <p class="plan_title">PERSONAL</p>
+            <h2 class="plan_price">$17.99</h2>
+            <p class="plan_term">MONTHLY</p>
+            <p class="plan_title">For Individuals</p>
+            <p class="plan_info">30 Templates</p>
+            <p class="plan_info">7 Landing Pages</p>
+            <p class="plan_info">12 Internal Pages</p>
+            <p class="plan_info">Basic Assistance</p>
+            <div class="pricing__button-wrapper">
+              <a href="">
+                <button class="purple">BUY NOW</button>
+              </a>
+            </div>
+          </div>
+          <div class="plan plan_b">
+            <p class="plan_title">BUSINESS</p>
+            <h2 class="plan_price">$37.99</h2>
+            <p class="plan_term plan__term-solo">MONTHLY</p>
+            <p class="plan_title">For Small Businesses</p>
+            <p class="plan_info plan__info-solo">60 Templates</p>
+            <p class="plan_info plan__info-solo">15 Landing Pages</p>
+            <p class="plan_info plan__info-solo">22 Internal Pages</p>
+            <p class="plan_info plan__info-solo">Priority Assistance</p>
+            <div class="pricing__button-wrapper">
+              <a href="">
+                <button class="purple purple__solo-button">BUY NOW</button>
+              </a>
+            </div>
+          </div>
+          <div class="plan">
+            <p class="plan_title">ENTERPRISE</p>
+            <h2 class="plan_price">$57.99</h2>
+            <p class="plan_term">MONTHLY</p>
+            <p class="plan_title">For Large Companies</p>
+            <p class="plan_info">90 Templates</p>
+            <p class="plan_info">27 Landing Pages</p>
+            <p class="plan_info">37 Internal Pages</p>
+            <p class="plan_info">Personal Assistance</p>
+            <div class="pricing__button-wrapper">
+              <a href="">
+                <button class="purple">BUY NOW</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
-
-
-</div>
-
-                
-    </section>
-
+      <footer>
+        <div class="footerlinks">
+            <div class="linksbox"></div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
