--- a/Treact/index__final-project.html
+++ b/Treact/index__final-project.html
@@ -345,12 +345,108 @@
           </div>
         </div>
       </section>
-
-      <footer>
-        <div class="footerlinks">
-            <div class="linksbox"></div>
-        </div>
-      </footer>
     </div>
+      <footer>
+        <div class="footer_row">
+        <div class="footerlinks">
+          <div class="linksbox">
+            <ul class="main_links">
+              <li class="main_title">MAIN</li>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Blog</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">FAQs</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Support</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">About Us</li>
+              </a>
+            </ul>
+            <ul class="main_links">
+              <li class="main_title">PRODUCT</li>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Log In</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Personal</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Business</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Team</li>
+              </a>
+            </ul>
+            <ul class="main_links">
+              <li class="main_title">PRESS</li>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Logos</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Events</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Stories</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Office</li>
+              </a>
+            </ul>
+            <ul class="main_links">
+              <li class="main_title">TEAM</li>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Career</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Founders</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Culture</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Onboarding</li>
+              </a>
+            </ul>
+            <ul class="main_links">
+              <li class="main_title">LEGAL</li>
+              <a class="footer_clickable" href="">
+                <li class="main_link">GDPR</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Privacy Policy</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Terms of Serivice</li>
+              </a>
+              <a class="footer_clickable" href="">
+                <li class="main_link">Disclaimer</li>
+              </a>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__bottom-box">
+          <a href="#Home">
+            <figure class="logo_wrapper logo__footer-wrapper">
+              <img
+                class="logo"
+                src="/Treact/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg"
+                alt="Treact"
+              />
+              <h2 class="logo_name logo__footer-name">Treact Inc.</h2>
+            </figure>
+          </a>
+          <p class="low_opacity">2018 Treact Inc. All Rights Reserved.</p>
+          <div class="footer_links">
+            <a class="footer_socials"href="">F</a>
+            <a class="footer_socials"href="">T</a>
+            <a class="footer_socials"href="">Y</a>
+          </div>
+        </div>
+    </div>
+      </footer>
+    
   </body>
 </html>
