--- a/Treact/index__final-project.html
+++ b/Treact/index__final-project.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Modern React Templates</title>
     <link rel="stylesheet" href="styles__final-project.css" />
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="site_box">
@@ -440,9 +444,15 @@
           </a>
           <p class="low_opacity">2018 Treact Inc. All Rights Reserved.</p>
           <div class="footer_links">
-            <a class="footer_socials"href="">F</a>
-            <a class="footer_socials"href="">T</a>
-            <a class="footer_socials"href="">Y</a>
+            <a class="footer_socials"href="">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a class="footer_socials"href="">
+                <i class="fa-brands fa-square-twitter"></i>
+            </a>
+            <a class="footer_socials"href="">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
           </div>
         </div>
     </div>
