--- a/ecommerce_website/index.html
+++ b/ecommerce_website/index.html
@@ -19,7 +19,7 @@
           <figure class="personal-logo">
             <img
               class="logo"
-              src="/E-Commerce Website/Library JS/Library JS Starter/assets/Library.svg"
+              src="/ecommerce_website/Library JS/Library JS Starter/assets/Library.svg"
               alt=""
             />
           </figure>
@@ -61,7 +61,7 @@
           </div>
           <figure class="header__img--wrapper">
             <img
-              src="/E-Commerce Website/Library JS/Library JS Starter/assets/Undraw_Books.svg"
+              src="/ecommerce_website/Library JS/Library JS Starter/assets/Undraw_Books.svg"
               alt=""
             />
           </figure>
@@ -123,7 +123,7 @@
                 <figure class="book__img--wrapper">
                   <img
                     class="book__img"
-                    src="/E-Commerce Website/Library JS/Library JS Starter/assets/crack the coding interview.png"
+                    src="/ecommerce_website/Library JS/Library JS Starter/assets/crack the coding interview.png"
                     alt=""
                   />
                 </figure>
@@ -143,7 +143,7 @@
                 <figure class="book__img--wrapper">
                   <img
                     class="book__img"
-                    src="/E-Commerce Website/Library JS/Library JS Starter/assets/atomic habits.jpg"
+                    src="/ecommerce_website/Library JS/Library JS Starter/assets/atomic habits.jpg"
                     alt=""
                   />
                 </figure>
@@ -163,7 +163,7 @@
                 <figure class="book__img--wrapper">
                   <img 
                     class="book__img"
-                    src="/E-Commerce Website/Library JS/Library JS Starter/assets/david goggins.jpeg"
+                    src="/ecommerce_website/Library JS/Library JS Starter/assets/david goggins.jpeg"
                     alt=""
                   />
                 </figure>
@@ -183,7 +183,7 @@
                 <figure class="book__img--wrapper">
                   <img
                     class="book__img"
-                    src="/E-Commerce Website/Library JS/Library JS Starter/assets/deep work.jpeg"
+                    src="/ecommerce_website/Library JS/Library JS Starter/assets/deep work.jpeg"
                     alt=""
                   />
                 </figure>
@@ -215,7 +215,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-1.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-1.jpeg"
                   alt=""
                 />
               </figure>
@@ -235,7 +235,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-2.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-2.jpeg"
                   alt=""
                 />
               </figure>
@@ -255,7 +255,7 @@
               <figure class="book__img--wrapper">
                 <img 
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-3.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-3.jpeg"
                   alt=""
                 />
               </figure>
@@ -275,7 +275,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-4.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-4.jpeg"
                   alt=""
                 />
               </figure>
@@ -295,7 +295,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-5.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-5.jpeg"
                   alt=""
                 />
               </figure>
@@ -314,7 +314,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-6.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-6.jpeg"
                   alt=""
                 />
               </figure>
@@ -333,7 +333,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-7.jpg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-7.jpg"
                   alt=""
                 />
               </figure>
@@ -352,7 +352,7 @@
               <figure class="book__img--wrapper">
                 <img
                   class="book__img"
-                  src="/E-Commerce Website/Library JS/Library JS Starter/assets/book-8.jpeg"
+                  src="/ecommerce_website/Library JS/Library JS Starter/assets/book-8.jpeg"
                   alt=""
                 />
               </figure>
@@ -398,7 +398,7 @@
   <div class="footer__wrapper">
     <a href="">
 <figure class="footer__logo">
-  <img class="footer__logo--img"src="/E-Commerce Website/Library JS/Library JS Starter/assets/Library.svg" alt="">
+  <img class="footer__logo--img"src="/ecommerce_website/Library JS/Library JS Starter/assets/Library.svg" alt="">
 </figure>
 </a>
 <ul class="footer__links">
