updated mobile use

--- a/Treact/index__final-project.html
+++ b/Treact/index__final-project.html
@@ -255,7 +255,7 @@
           <div class="started_info">
             <div class="group_1">
               <h1 class="started_head">01</h1>
-              <div class="text_group">
+              <div class="text_group getting___started--group-para">
                 <h2 class="mini_title">Register</h2>
                 <p class="services_para">
                   We strictly only deal with vendors that provide top notch
@@ -265,7 +265,7 @@
             </div>
             <div class="group_1">
               <h1 class="started_head">02</h1>
-              <div class="text_group">
+              <div class="text_group getting___started--group-para">
                 <h2 class="mini_title">Download</h2>
                 <p class="services_para">
                   We strictly only deal with vendors that provide top notch
@@ -275,7 +275,7 @@
             </div>
             <div class="group_1">
               <h1 class="started_head">03</h1>
-              <div class="text_group">
+              <div class="text_group getting___started--group-para">
                 <h2 class="mini_title">Run</h2>
                 <p class="services_para">
                   We strictly only deal with vendors that provide top notch
